--- a/caramel-config/build.gradle
+++ b/caramel-config/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.30'
 
     implementation 'org.springframework:spring-core:5.2.8.RELEASE'
-    implementation 'org.springframework:spring-beans:5.2.8.RELEASE'
+//    implementation 'org.springframework:spring-beans:5.2.8.RELEASE'
 }
 
 ext {
