--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = 'caramel'
 include 'caramel-config'
 include 'caramel-assist'
 
+include 'caramel-zoo'
+include 'caramel-zoo:alpaca'
