配置文件定位说明

--- a/build.gradle
+++ b/build.gradle
@@ -19,28 +19,7 @@ allprojects {
             classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
         }
 
-        Properties localProps = new Properties()
-        if (project.rootProject.file('local.properties').exists()) {
-            localProps.load(project.rootProject.file('local.properties').newDataInputStream())
-        }
-        if (project.rootProject.file('gradle-local.properties').exists()) {
-            localProps.load(project.rootProject.file('gradle-local.properties').newDataInputStream())
-        }
-        if (project.rootProject.file('gradle.properties').exists()) {
-            localProps.load(project.rootProject.file('gradle.properties').newDataInputStream())
-        }
-
-        gradle.taskGraph.whenReady {
-            tasks.each {task ->
-                def projectKey = "gradle.task." + task.project.name
-                def projectValue = localProps.getProperty(projectKey)
-                def taskKey = "gradle.task." + task.name + "." + task.project.name
-                def taskValue = localProps.getProperty(taskKey)
-                if ("false".equalsIgnoreCase(projectValue) || "false".equalsIgnoreCase(taskValue)) {
-                    task.enabled(false)
-                }
-            }
-        }
+        apply from: rootProject.file('_building/module-task-skippable.gradle').getAbsolutePath()
     }
 
     repositories {
