--- a/caramel-zoo/alpaca/build.gradle
+++ b/caramel-zoo/alpaca/build.gradle
@@ -16,15 +16,15 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.13.3'
     implementation 'org.apache.logging.log4j:log4j-web:2.13.3'
 
-    implementation 'org.springframework:spring-core:5.2.9.RELEASE'
-    implementation 'org.springframework:spring-context:5.2.9.RELEASE'
-    implementation 'org.springframework:spring-beans:5.2.9.RELEASE'
-    implementation 'org.springframework:spring-aop:5.2.9.RELEASE'
-    implementation 'org.springframework:spring-web:5.2.9.RELEASE'
-    implementation 'org.springframework:spring-webmvc:5.2.9.RELEASE'
-    implementation 'org.springframework:spring-oxm:5.2.9.RELEASE'
-    implementation 'org.springframework:spring-tx:5.2.9.RELEASE'
-    implementation 'org.springframework:spring-jdbc:5.2.9.RELEASE'
+    implementation 'org.springframework:spring-core:5.3.1'
+    implementation 'org.springframework:spring-context:5.3.1'
+    implementation 'org.springframework:spring-beans:5.3.1'
+    implementation 'org.springframework:spring-aop:5.3.1'
+    implementation 'org.springframework:spring-web:5.3.1'
+    implementation 'org.springframework:spring-webmvc:5.3.1'
+    implementation 'org.springframework:spring-oxm:5.3.1'
+    implementation 'org.springframework:spring-tx:5.3.1'
+    implementation 'org.springframework:spring-jdbc:5.3.1'
 
     implementation 'com.fasterxml.jackson.core:jackson-core:2.11.3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
