--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 import org.gradle.api.internal.project.DefaultProject
 
-// 子模块通用配置
 allprojects {
     buildscript {
         repositories {
@@ -21,7 +20,7 @@ allprojects {
             classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
         }
 
-        apply from: rootProject.file('_building/module-task-skippable.gradle').getAbsolutePath()
+        apply from: "${rootDir}/gradle/module-task-skippable.gradle"
     }
 
     repositories {
@@ -38,16 +37,29 @@ allprojects {
         maven { url "https://mirrors.huaweicloud.com/repository/maven/huaweicloudsdk/" }
     }
 
+    group 'com.lomcat.caramel'
+    version = '0.0.1'
+
     apply plugin: 'java-library'
     apply plugin: 'idea'
 
     sourceCompatibility = 8
     targetCompatibility = 8
 
-    [compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
-
-    group 'com.lomcat.caramel'
-    version = '0.0.1'
+    compileJava {
+        options.encoding = "UTF-8"
+    }
+    compileTestJava {
+        options.encoding = "UTF-8"
+    }
+    javadoc {
+        options.encoding = "UTF-8"
+        options.memberLevel = JavadocMemberLevel.PROTECTED
+        options.author = true
+        options.header = project.name
+        options.use = true
+        options.addStringOption("Xdoclint:none", "-quiet")
+    }
 
     configurations {
 //        developmentOnly
@@ -63,48 +75,14 @@ allprojects {
     }
 
     ext {
-        buildTime = {
-            return new Date().format("yyyyMMddHHmm", TimeZone.getTimeZone("GMT+08:00"))
-        }
-
         caramelCore = project(':caramel-core') as DefaultProject
+        caramelConfig = project(':caramel-config') as DefaultProject
 
         // ----- dependency definitions -----
         slf4jApi = 'org.slf4j:slf4j-api:1.7.30'
         typesafeConfig = 'com.typesafe:config:1.4.0'
 
-        // ----- publications -----
-
-        BINTRAY_REPO = 'maven-test'
-        BINTRAY_NAME = 'caramel'
-        BINTRAY_PUBLISH = true
-        BINTRAY_OVERRIDE = false
-        BINTRAY_DRY_RUN = false
-
-        PUBLISHED_PACKAGING = 'jar'
-        PUBLISHED_GROUP_ID = 'com.lomcat.caramel'
-        PUBLISHED_ARTIFACT_ID = 'caramel'
-        PUBLISHED_VERSION = rootProject.version
-        PUBLISHED_VCS_TAG = rootProject.version
-
-        PROJECT_NAME = 'Caramel'
-        PROJECT_DESCRIPTION = 'Carefree Framework Library'
-        PROJECT_LABELS = ['Caramel', 'Spring', 'SpringBoot']
-        PROJECT_WEBSITE_URL = 'https://github.com/lomcat/caramel'
-        PROJECT_VCS_URL = 'https://github.com/lomcat/caramel.git'
-        PROJECT_ISSUE_TRACKER_URL = 'https://github.com/lomcat/caramel/issues'
-
-        DEVELOPER_ID = 'kweny'
-        DEVELOPER_NAME = 'Kweny'
-        DEVELOPER_EMAIL = 'iamkweny@gmail.com'
-
-        LICENSE_NAME = 'The Apache Software License, Version 2.0'
-        LICENSE_URL = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-        LICENSE_DISTRIBUTION = 'rebo'
-        ALL_LICENSES = ["Apache-2.0"]
-
-        // mavenCentralSync
-        MCS_ENABLED = false
-        MCS_CLOSE = '0'
+        apply from: "${rootDir}/gradle/publications.gradle"
     }
+
 }
