--- a/caramel-config/caramel-config.gradle
+++ b/caramel-config/caramel-config.gradle
@@ -17,5 +17,4 @@ ext {
     PROJECT_DESCRIPTION = 'Caramel Config'
 }
 
-//apply from: 'https://raw.githubusercontent.com/kweny/droaket/master/gradle/bintray-upload-normal.gradle'
-apply from: rootProject.file('_building/bintray-upload-normal.gradle').getAbsolutePath()
+apply from: "${rootDir}/gradle/bintray-upload-normal.gradle"
