--- a/caramel-zoo/alpaca/build.gradle
+++ b/caramel-zoo/alpaca/build.gradle
@@ -9,7 +9,8 @@ war {
 }
 
 dependencies {
-    implementation project(':caramel-config')
+//    implementation project(':caramel-config')
+    implementation project(':caramel-config-local')
 
     implementation 'org.slf4j:slf4j-api:1.7.30'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.13.3'
