--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@
 include 'caramel-core'
 include 'caramel-config'
 include 'caramel-config-local'
+include 'caramel-config-nacos'
 
 include 'caramel-zoo'
 include 'caramel-zoo:alpaca'
@@ -10,4 +11,8 @@ rootProject.name = 'caramel'
 rootProject.children.each {project ->
     project.buildFileName = "${project.name}.gradle"
 }
+include 'caramel-config-http'
+include 'caramel-config-git'
+include 'caramel-config-scc'
+include 'caramel-config-apollo'
 
