--- a/caramel-config-apollo/caramel-config-apollo.gradle
+++ b/caramel-config-apollo/caramel-config-apollo.gradle
@@ -1,4 +1,4 @@
-description = 'Caramel Config for Nacos'
+description = 'Caramel Config for Apollo'
 
 dependencies {
     api project(':caramel-core')
