--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,8 @@
-gradle.task.bintrayUpload.alpaca.enabled=false
+version=0.0.1-SNAPSHOT
+
+gradle.task.publish.caramel-zoo.enabled=false
+gradle.task.publishMavenJavaPublicationToMavenRepository.caramel-zoo.enabled=false
+gradle.task.publishMavenJavaPublicationToMaven2Repository.caramel-zoo.enabled=false
+gradle.task.publish.alpaca.enabled=false
+gradle.task.publishMavenJavaPublicationToMavenRepository.alpaca.enabled=false
+gradle.task.publishMavenJavaPublicationToMaven2Repositoryalpaca.enabled=false
