--- a/gradle/publications.gradle
+++ b/gradle/publications.gradle
@@ -1,33 +1,65 @@
-ext {
-    BINTRAY_REPO = 'maven-test'
-    BINTRAY_NAME = 'caramel'
-    BINTRAY_PUBLISH = true
-    BINTRAY_OVERRIDE = false
-    BINTRAY_DRY_RUN = false
+apply plugin: 'maven-publish'
 
-    PUBLISHED_PACKAGING = 'jar'
-    PUBLISHED_GROUP_ID = 'com.lomcat.caramel'
-    PUBLISHED_ARTIFACT_ID = 'caramel'
-    PUBLISHED_VERSION = rootProject.version
-    PUBLISHED_VCS_TAG = rootProject.version
-
-    PROJECT_NAME = 'Caramel'
-    PROJECT_DESCRIPTION = 'Carefree Framework Library'
-    PROJECT_LABELS = ['Lomcat', 'Caramel', 'Spring', 'SpringBoot']
-    PROJECT_WEBSITE_URL = 'https://github.com/lomcat/caramel'
-    PROJECT_VCS_URL = 'https://github.com/lomcat/caramel.git'
-    PROJECT_ISSUE_TRACKER_URL = 'https://github.com/lomcat/caramel/issues'
-
-    DEVELOPER_ID = 'kweny'
-    DEVELOPER_NAME = 'Kweny'
-    DEVELOPER_EMAIL = 'iamkweny@gmail.com'
-
-    LICENSE_NAME = 'The Apache Software License, Version 2.0'
-    LICENSE_URL = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    LICENSE_DISTRIBUTION = 'rebo'
-    ALL_LICENSES = ["Apache-2.0"]
-
-// mavenCentralSync
-    MCS_ENABLED = false
-    MCS_CLOSE = '0'
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            pom {
+                afterEvaluate {
+                    name = project.description
+                    description = project.description
+                }
+                url = "https://github.com/lomcat/caramel"
+                organization {
+                    name = "Lomcat IO"
+                    url = "https://caramel.lomcat.io"
+                }
+                licenses {
+                    license {
+                        name = "Apache License, Version 2.0"
+                        url = "https://www.apache.org/licenses/LICENSE.txt-2.0"
+                        distribution = "repo"
+                    }
+                }
+                scm {
+                    url = "https://github.com/lomcat/caramel"
+                    connection = "scm:git:git://github.com/lomcat/caramel"
+                    developerConnection = "scm:git:git://github.com/lomcat/caramel"
+                }
+                developers {
+                    developer {
+                        id = "kweny"
+                        name = "Kweny"
+                        email = "iamkweny@gmail.com"
+                    }
+                }
+                issueManagement {
+                    system = "GitHub"
+                    url = "https://github.com/lomcat/caramel/issues"
+                }
+            }
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionResult()
+                }
+                usage('java-runtime') {
+                    fromResolutionResult()
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            def releaseRepoUrl = "release_repo_url"
+            def releaseRepoUsername = "release_repo_username"
+            def releaseRepoPassword = "release_repo_password"
+            def snapshotRepoUrl = "snapshot_repo_url"
+            def snapshotRepoUsername = "snapshot_repo_username"
+            def snapshotRepoPassword = "snapshot_repo_password"
+            url version.endsWith('SNAPSHOT') ? snapshotRepoUrl : releaseRepoUrl
+            credentials {
+                username version.endsWith('SNAPSHOT') ? snapshotRepoUsername : releaseRepoUsername
+                password version.endsWith('SNAPSHOT') ? snapshotRepoPassword : releaseRepoPassword
+            }
+        }
+    }
 }
