--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,4 @@ gradle.task.publishMavenJavaPublicationToMavenRepository.caramel-zoo.enabled=fal
 gradle.task.publishMavenJavaPublicationToMaven2Repository.caramel-zoo.enabled=false
 gradle.task.publish.alpaca.enabled=false
 gradle.task.publishMavenJavaPublicationToMavenRepository.alpaca.enabled=false
-gradle.task.publishMavenJavaPublicationToMaven2Repositoryalpaca.enabled=false
+gradle.task.publishMavenJavaPublicationToMaven2Repository.alpaca.enabled=false
