--- a/caramel-zoo/alpaca/src/main/resources/config/redis.properties
+++ b/caramel-zoo/alpaca/src/main/resources/config/redis.properties
@@ -5,3 +5,4 @@ spring.redis.lettuce.pool.max-active=8
 spring.redis.lettuce.pool.max-wait=1ms
 spring.redis.jedis.pool.max-active=16
 spring.redis.client-name=alpaca-redis
+base.pool-prepared-statements=true
