--- a/caramel-config-local/caramel-config-local.gradle
+++ b/caramel-config-local/caramel-config-local.gradle
@@ -1,6 +1,6 @@
 description = 'Caramel Config for Local File System'
 
 dependencies {
-    api project(':caramel-core')
+    implementation project(':caramel-core')
     api project(':caramel-config')
 }
